1.7.0 Add semantic CSS classes, overrides, and build info
